fixed spacing issues

--- a/assets/css/dropcast.css
+++ b/assets/css/dropcast.css
@@ -15,8 +15,8 @@
     transform: translateX(-2px); }
   60% {
     transform: translateX(2px); } }
-/* * {
-  box-sizing: border-box; } */
+* {
+  box-sizing: border-box; }
 
 html, body {
   margin: 0;
@@ -53,12 +53,13 @@ a {
 footer {
   background-color: #1C1F2A;
   display: flex;
-  padding: .5rem 2rem;
-  font-size: 1rem;
-  font-weight: 300;
-  text-align: right }
+  padding: .5rem 1rem;
+  font-size: .7rem;
+  text-align: center;
+  font-family: 'David Libre', serif; 
+ }
   footer .footer__content {
-    width: 60%; }
+    width: 100%; }
 
 
 .hidden {
@@ -132,8 +133,8 @@ nav {
   padding: 2rem 3rem; }
 
 .site__title {
-  font-size: 3rem;
-  margin-bottom: 1rem;
+  font-size: 2.8rem;
+  margin-bottom: 1.3rem;
   position: relative; }
   .site__title.site__title--separator:after {
     position: absolute;
@@ -141,7 +142,7 @@ nav {
     width: 60%;
     content: '';
     left: 0;
-    bottom: -1.3rem; }
+    bottom: -1.5rem; }
 
 .site__description {
   color: #c1bfbf;
@@ -277,85 +278,6 @@ nav {
   font-weight: 100;
   color: #c1bfbf; }
 
-.play-pause-btn {
-  height: 100%;
-  width: 60px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border: none;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #141720;
-  outline: none; }
-  .play-pause-btn.play {
-    background-image: url(../images/play.svg); }
-  .play-pause-btn.pause {
-    background-image: url("../images/pause.svg"); }
-
-.audio-player {
-  position: fixed;
-  background-color: #292C37;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  min-width: 300px;
-  height: 3.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-  .audio-player .play-pause-btn {
-    display: none;
-    cursor: pointer; }
-  .audio-player .spinner {
-    margin-left: 1.4rem;
-    width: 18px;
-    height: 18px;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/355309/loading.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    animation: spin 0.4s linear infinite; }
-  .audio-player .slider {
-    flex-grow: 1;
-    background-color: #F7F7F6;
-    cursor: pointer;
-    position: relative; }
-    .audio-player .slider .progress {
-      background-color: #7CCDB9;
-      border-radius: inherit;
-      position: absolute;
-      pointer-events: none; }
-      .audio-player .slider .progress .pin {
-        height: 16px;
-        width: 16px;
-        border-radius: 8px;
-        background-color: #7CCDB9;
-        position: absolute;
-        pointer-events: all;
-        box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.32); }
-  .audio-player .controls {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 16px;
-    line-height: 18px;
-    color: #55606E;
-    display: flex;
-    flex-grow: 1;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 24px;
-    margin-right: 24px; }
-    .audio-player .controls .slider {
-      margin-left: 16px;
-      margin-right: 16px;
-      border-radius: 2px;
-      height: 4px; }
-      .audio-player .controls .slider .progress {
-        width: 0;
-        height: 100%; }
-        .audio-player .controls .slider .progress .pin {
-          right: -8px;
-          top: -6px; }
-    .audio-player .controls span {
-      cursor: default; }
 
 /* mobile first*/
 /* Custom, iPhone Retina */
@@ -444,10 +366,6 @@ nav {
   .episode__number {
     display: block; }
 
-  /* .episode__media {
-    width: 100%;
-  }  */
-
   .episode__detail {
     width: 100%; }
 
@@ -507,8 +425,5 @@ nav {
       margin: 5rem 3rem 0 3rem; }
     .right .site__navigation {
       margin: 2rem 0; }
-
-  .site__secondary_title {
-    display: block; }
-
-  
+    .site__secondary_title {
+    display: block; } }
